# writing-os-in-rust

./: Cargo.toml  x86_64-blog_os.json
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  vga.rs
tests/: basic_boot.rs  stack_overflow.rs
