[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.18"
x86_64 = "0.14.2"
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

# static_init = "1.0.2" # It seems that it depends on std.
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Setting "panic" to "abort" disables stack unwinding.
# Since this settings in Cargo.toml makes cargo test mad, put this setting in target json instead.
# [profile.dev]
# panic = "abort"
# [profile.release]
# panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300          # in seconds

# Run this test without a runner.
[[test]]
name = "stack_overflow"
harness = false